# code-golf

./: .dockerignore  .env  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  PROGRESS.md  README.md  code-golf.db  code-golf.db-shm  code-golf.db-wal  docker-compose.yml  rust-toolchain.toml
.cargo/: config.docker.toml
migrations/: 0005_tournaments.sql  0006_api_keys.sql  0007_normalize_crlf.sql  001_initial.sql  002_par_system.sql  003_formatted_errors.sql  004_feedback.sql  20260427000001_add_performance_indexes.sql
src/: app.rs  config.rs  csrf.rs  error.rs  main.rs  rate_limit.rs  scoring.rs
src/admin/: api.rs  handlers.rs
src/auth/: handlers.rs  mod.rs
src/cache/: mod.rs
src/db/: mod.rs  models.rs
src/feedback/: handlers.rs
src/problems/: handlers.rs
src/profile/: mod.rs
src/runner/: languages.rs  mod.rs  sandbox.rs
src/scoreboard/: handlers.rs
src/submissions/: handlers.rs  judge.rs  mod.rs
src/tournaments/: mod.rs
static/: app.js  style.css
templates/: base.html  error.html  index.html
templates/admin/: dashboard.html
templates/admin/api_keys/: created.html  list.html
templates/admin/feedback/: list.html
templates/admin/problems/: edit.html  list.html  new.html  test_cases.html
templates/admin/submissions/: list.html
templates/admin/tournaments/: edit.html  list.html  new.html
templates/admin/users/: list.html
templates/auth/: login.html  register.html
templates/feedback/: form.html  success.html
templates/problems/: detail.html  list.html
templates/profile/: index.html
templates/scoreboard/: global.html  problem.html
templates/submissions/: detail.html  result.html
templates/tournaments/: detail.html  list.html
tests/integration/: auth_test.rs  helpers.rs  problems_test.rs
tests/unit/: scoring_test.rs
