[package]
name = "code-golf"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["macros"] }
axum-extra = { version = "0.10", features = ["cookie", "typed-header"] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["fs", "trace", "compression-gzip"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "macros", "migrate", "chrono"] }
tower-sessions = { version = "0.14", features = ["memory-store"] }
minijinja = { version = "2", features = ["loader", "builtins"] }
argon2 = { version = "0.5" }
rand = { version = "0.9" }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
chrono = { version = "0.4", features = ["serde"] }
thiserror = { version = "2" }
anyhow = { version = "1" }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
pulldown-cmark = { version = "0.12" }
tempfile = { version = "3" }
nix = { version = "0.29", features = ["resource", "process", "signal"] }
time = { version = "0.3" }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
